--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,14 @@
 [versions]
 velocity = "3.4.0-SNAPSHOT"
+hikaricp = "6.2.1"
+mariadb-java-client = "3.5.1"
+slf4j = "2.0.16"
 
 [libraries]
 velocity-api = { group = "com.velocitypowered", name = "velocity-api", version.ref = "velocity" }
+hikaricp = { group = "com.zaxxer", name = "HikariCP", version.ref = "hikaricp" }
+mariadb-java-client = { group = "org.mariadb.jdbc", name = "mariadb-java-client", version.ref = "mariadb-java-client" }
+slf4j-simple = { group = "org.slf4j", name = "slf4j-simple", version.ref = "slf4j" }
+
+[plugins]
+shadow = { id = "com.gradleup.shadow", version = "9.0.0-beta4" }
